src/snapshots/pbsql__reference_extractor__tests__drop_table.snap
---
source: src/reference_extractor.rs
expression: translate_result
---
Ok:
  indices: []
  relations:
    - - value: ~/heyy
        quote_style: "\""
  original_sql:
    - "drop table \"~/heyy\""
