src/snapshots/pbsql__reference_extractor__tests__parser_error.snap
---
source: src/reference_extractor.rs
expression: translate_result
---
Err: "sql parser error: Unterminated string literal at Line: 3, Column 62"
