src/snapshots/pbsql__reference_extractor__tests__select1.snap
---
source: src/reference_extractor.rs
expression: translate_result
---
Ok:
  indices: []
  relations:
    - - value: ~/books/things
        quote_style: "\""
  original_sql:
    - ""
    - "            SELECT"
    - "                \"~/books/things\".id, \"~/books/things\".title, \"~/books/things\".subtitle,"
    - "                \"~/books/things\".image_url, \"~/books/things\".external_link,"
    - "                \"~/books/things\".external_link_title, \"~/books/things\".excluded"
    - "            FROM \"~/books/things\""
    - "            WHERE \"~/books/things\".id = ?"
    - "            LIMIT 1"
    - "        "
