src/snapshots/pbsql__reference_extractor__tests__select_null.snap
---
source: src/reference_extractor.rs
expression: translate_result
---
Ok:
  indices: []
  relations: []
  original_sql:
    - SELECT null
