src/snapshots/pbsql__reference_extractor__tests__union_in_subquery.snap
---
source: src/reference_extractor.rs
expression: translate_result
---
Ok:
  indices: []
  relations:
    - - value: ~/books/matches
        quote_style: "\""
    - - value: ~/books/things
        quote_style: "\""
  original_sql:
    - ""
    - "            SELECT"
    - "                sq.id, sq.num_matches"
    - "            FROM ("
    - "                SELECT books.id, 0 AS \"num_matches\""
    - "                FROM \"~/books/things\" AS \"books\""
    - "                LEFT JOIN \"~/books/matches\" AS \"matches\""
    - "                ON ("
    - "                    books.id = matches.winner_id"
    - "                    OR books.id = matches.loser_id"
    - "                )"
    - "                WHERE matches.loser_id IS NULL"
    - ""
    - "                UNION ALL"
    - ""
    - "                SELECT winner_id AS \"id\", 1 AS \"num_matches\""
    - "                FROM \"~/books/matches\""
    - ""
    - "                UNION ALL"
    - ""
    - "                SELECT loser_id AS \"id\", 1 AS \"num_matches\""
    - "                FROM \"~/books/matches\""
    - "            ) AS \"sq\""
    - "            GROUP BY sq.id"
    - "            ORDER BY sum(sq.num_matches) ASC"
    - "            LIMIT ?"
    - "        "
