src/snapshots/pbsql__reference_extractor__tests__unsupported_statement_type.snap
---
source: src/reference_extractor.rs
expression: translate_result
---
Err: "not implemented: Statement::Close"
